Minor grammar fix in intro

--- a/index.jade
+++ b/index.jade
@@ -50,7 +50,7 @@ html(lang="en")
             | we've surmised that the ideal seems to lie somewhere in the middle.
 
           p 
-            | Ultimately we'd like something that is comprised of lots of independent little tools that each to one thing (see 
+            | Ultimately we'd like something that is comprised of lots of independent little tools that each do one thing well (see 
             a(href="http://www.faqs.org/docs/artu/ch01s06.html") Unix philosophy
             | ).
 
